--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,6 +27,7 @@
         </nav>
     </header>
 
+   <!-- Added "main" element due bad accesibility practices and better SEO optimization and overall readability. -->
     <main>
         <!-- Removed <div class="hero"> and replaced it with <section> due bad accesibility practices and better SEO optimization and overall readability. -->
         <section class="hero"></section>
